--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   ],
   "main": "src/index.tsx",
   "dependencies": {
+    "@emotion/react": "11.9.0",
+    "@emotion/styled": "11.8.1",
+    "@mui/icons-material": "5.6.2",
+    "@mui/material": "5.6.2",
     "@types/emoji-mart": "3.0.9",
     "@types/prismjs": "1.26.0",
     "emoji-mart": "3.0.1",
