--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/emoji-mart": "3.0.9",
     "@types/prismjs": "1.26.0",
     "emoji-mart": "3.0.1",
+    "highlight.js": "11.5.1",
     "prismjs": "1.28.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-scripts": "4.0.3",
+    "simple-markdown": "0.7.3",
     "slate": "0.77.2",
     "slate-history": "0.66.0",
     "slate-hyperscript": "0.77.0",
