--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     ],
     "compilerOptions": {
         "strict": true,
+        "downlevelIteration": true,
         "esModuleInterop": true,
         "lib": [
             "dom",
